--- a/package.json
+++ b/package.json
@@ -26,9 +26,17 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
+    "multer-storage": "^0.4.1",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
+  },
+  "overrides": {
+    "axios":"1.9.0",
+    "follow-redirects":"1.15.9",
+    "node-forge":"1.3.1",
+    "request":"2.88.2",
+    "tough-cookie":"5.1.2"
   }
 }
