--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "name": "majorproject",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,18 +14,18 @@
   "description": "",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.1",
-    "cloudinary": "^2.6.1",
+    "cloudinary": "^2.7.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
-    "mongoose": "^8.13.0",
-    "multer": "^1.4.5-lts.2",
+    "mongoose": "^8.16.1",
+    "multer": "^1.4.5-lts.1",
     "multer-storage": "^0.4.1",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
@@ -33,10 +33,10 @@
     "passport-local-mongoose": "^8.0.0"
   },
   "overrides": {
-    "axios":"1.9.0",
-    "follow-redirects":"1.15.9",
-    "node-forge":"1.3.1",
-    "request":"2.88.2",
-    "tough-cookie":"5.1.2"
+    "axios": "1.9.0",
+    "follow-redirects": "1.15.9",
+    "node-forge": "1.3.1",
+    "tough-cookie": "5.1.2",
+    "@google-cloud/storage": "7.16.0"
   }
 }
